<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/detailTitle"
        android:textSize="24dp"/>

    <!--入力1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/calc_drawable">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text = "@string/inputText"/>

        <EditText
            android:id="@+id/firstInput"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!--演算子1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/calc_drawable">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text = "@string/inputSimbol"/>

        <Spinner
            android:id="@+id/simbol_spinner"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/simbol_items" />
    </LinearLayout>

    <!--入力2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/calc_drawable">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text = "@string/inputText"/>

        <EditText
            android:id="@+id/secondInput"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!--ボタン群-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addPartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/addPartButton"/>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/confirmButton"/>

    </LinearLayout>

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
    />

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/firstEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Spinner
            android:id="@+id/simbol_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/simbol_items" />
        <EditText
            android:id="@+id/secondEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/res" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
    />
    -->

</LinearLayout>